force-app/main/default/objects/RT_Product__c/RT_Product__c.object-meta.xml
<CustomObject>
    <description>Components related to a Package; e.g. Web component of Web Meeting Pro (25).</description>
    <label>RT Product</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RT Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>