force-app/main/default/objects/RT_Product__c/fields/package__c.field-meta.xml
<CustomField>
    <fullName>package__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>CAUTION - USED IN INTEGRATIONS</description>
    <label>Package</label>
    <referenceTo>Package__c</referenceTo>
    <relationshipLabel>RT Products</relationshipLabel>
    <relationshipName>RT_Products</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>