force-app/main/default/objects/RT_Product__c/fields/recurringCharge__c.field-meta.xml
<CustomField>
    <fullName>recurringCharge__c</fullName>
    <description>CAUTION - USED IN INTEGRATIONS</description>
    <label>Recurring Charge</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>