force-app/main/default/objects/RT_Product__c/fields/schedule__c.field-meta.xml
<CustomField>
    <fullName>schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>CAUTION - USED IN INTEGRATIONS</description>
    <label>Schedule</label>
    <referenceTo>Schedule__c</referenceTo>
    <relationshipLabel>RT Products</relationshipLabel>
    <relationshipName>RT_Products</relationshipName>
    <type>Lookup</type>
</CustomField>