force-app/main/default/objects/RT_Product__c/fields/scheduleName__c.field-meta.xml
<CustomField>
    <fullName>scheduleName__c</fullName>
    <formula>schedule__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Schedule Name</label>
    <type>Text</type>
</CustomField>