force-app/main/default/objects/RT_Product__c/fields/singleCharge__c.field-meta.xml
<CustomField>
    <fullName>singleCharge__c</fullName>
    <description>CAUTION - USED IN INTEGRATIONS</description>
    <label>Single Charge</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>