force-app/main/default/objects/RT_Product__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACCOUNT</fullName>
            </value>
            <value>
                <fullName>AUDIO</fullName>
            </value>
            <value>
                <fullName>FOXDEN</fullName>
            </value>
            <value>
                <fullName>FOXDEN_CONNECT</fullName>
            </value>
            <value>
                <fullName>FOXDEN_CONNECT_HARDWARE</fullName>
            </value>
            <value>
                <fullName>HOSTING</fullName>
            </value>
            <value>
                <fullName>WEB</fullName>
            </value>
            <value>
                <fullName>S3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>