force-app/main/default/objects/RT_Product__c/fields/useAssignedScheduleAsDefault__c.field-meta.xml
<CustomField>
    <fullName>useAssignedScheduleAsDefault__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use the schedule assigned to this product as the default value in the drop down when selecting plan/products.</description>
    <label>Use Assigned Schedule As Default</label>
    <type>Checkbox</type>
</CustomField>