force-app/main/default/objects/RT_Product__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>package__c</columns>
    <columns>singleCharge__c</columns>
    <columns>recurringCharge__c</columns>
    <columns>recurringChargeFrequency__c</columns>
    <columns>scheduleName__c</columns>
    <columns>objectId__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>